--- a/app/src/main/res/layout/fragment_friends_all_expenses.xml
+++ b/app/src/main/res/layout/fragment_friends_all_expenses.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,6 @@
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_container"
-        android:layout_below="@id/shimmer_view_top"
         android:layout_width="match_parent"
         android:layout_alignWithParentIfMissing="true"
         android:layout_height="match_parent"
@@ -25,58 +24,67 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_80sdp">
+        android:background="@color/white"
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/orange_gradient">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="start"
+            android:padding="10dp">
 
             <ImageButton
                 android:id="@+id/backButton"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_margin="10dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white" />
+                app:tint="@color/black" />
 
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ImageOfExpense"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile_imaage"
+                app:shapeAppearanceOverlay="@style/CircularImageStyle" />
 
-            <ImageButton
-                android:id="@+id/settingsButton"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_margin="10dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/setting"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white" />
+            <TextView
+                android:id="@+id/contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:paddingEnd="@dimen/_30sdp"
+                android:layout_gravity="center_vertical"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <!-- App Icon -->
-    <ImageView
-        android:layout_width="76dp"
-        android:layout_height="76dp"
-        android:id="@+id/ImageOfExpense"
-        android:layout_gravity="start"
-        android:layout_marginStart="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_50sdp"
-        android:background="@drawable/app_icon_background"
-        android:padding="16dp"
-        android:src="@drawable/airplane"
-        app:tint="@color/white" />
+<!--    <ImageView-->
+<!--        android:layout_width="76dp"-->
+<!--        android:layout_height="76dp"-->
+<!--        android:id="@+id/ImageOfExpense"-->
+<!--        android:layout_gravity="start"-->
+<!--        android:layout_marginStart="@dimen/_50sdp"-->
+<!--        android:layout_marginTop="@dimen/_50sdp"-->
+<!--        android:background="@drawable/app_icon_background"-->
+<!--        android:padding="16dp"-->
+<!--        android:src="@drawable/airplane"-->
+<!--        app:tint="@color/white" />-->
 
     <!-- Main Content -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topBar"
         android:id="@+id/BottomAllContent"
-        android:layout_marginTop="@dimen/_100sdp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -85,79 +93,27 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text=""
-                android:id="@+id/contact"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/intotal"
-                android:layout_gravity="start"
-                android:layout_marginStart="@dimen/_40sdp"
-                android:layout_marginTop="8dp"
-                android:visibility="gone"
-                android:text="No expenses here yet."
-                android:textColor="@color/gray"
-                android:textSize="@dimen/_13ssp" />
-
-            <!-- Action Buttons -->
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:layout_weight="1"
-                    android:text="Settle up"
-                    android:textSize="@dimen/_10ssp" />
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Charts"
-
-                    android:textSize="@dimen/_10ssp" />
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_weight="1"
-                    android:text="Balances"
-
-                    android:textSize="@dimen/_10ssp" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:id="@+id/nobill"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:text="no Expenses added yet!"
-                android:textSize="20sp" />
+                android:gravity="center"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:text="no Expenses added yet!"
+                    android:textSize="20sp" />
+
+            </RelativeLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_transaction_items"
                 android:layout_marginBottom="@dimen/_85sdp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:visibility="gone"
                 android:layout_weight="1"
                 android:clipToPadding="false"
                 android:paddingBottom="8dp" />
@@ -170,14 +126,15 @@
         android:id="@+id/addExp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_20sdp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:text="Add expense"
         android:textColor="@color/white"
         app:backgroundTint="@color/green"
         app:icon="@drawable/history_day"
         app:iconTint="@color/white" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
 
